# helios

./: .editorconfig  .gitignore  Cargo.toml  README.md  azure-pipelines.yml  build.rs
.github/workflows/: ci.yml
src/: main.rs
src/blackborder/: mod.rs
src/capture/: dispmanx.rs  mod.rs
src/device/: apa102.rs  mod.rs
src/imageprocessing/: mod.rs  smoothing.rs
src/imageprocessing/blackborder/: bounding_box.rs  mod.rs
